cpp2py/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    LBRACKET
    RBRACKET

Grammar

Rule 0     S' -> program
Rule 1     program -> global_items
Rule 2     global_items -> global_items global_item
Rule 3     global_items -> global_item
Rule 4     global_item -> function_def
Rule 5     global_item -> stmt
Rule 6     function_def -> type_specifier ID LPAREN param_list RPAREN block
Rule 7     param_list -> param_list COMMA param
Rule 8     param_list -> param
Rule 9     param_list -> empty
Rule 10    param -> type_specifier ID
Rule 11    type_specifier -> INT
Rule 12    type_specifier -> FLOAT
Rule 13    type_specifier -> DOUBLE
Rule 14    type_specifier -> CHAR
Rule 15    type_specifier -> BOOL
Rule 16    type_specifier -> STRING
Rule 17    block -> LBRACE stmt_list RBRACE
Rule 18    stmt_list -> stmt_list stmt
Rule 19    stmt_list -> empty
Rule 20    stmt -> decl_stmt
Rule 21    stmt -> expr_stmt
Rule 22    stmt -> if_stmt
Rule 23    stmt -> while_stmt
Rule 24    stmt -> for_stmt
Rule 25    stmt -> io_stmt
Rule 26    stmt -> return_stmt
Rule 27    stmt -> break_stmt
Rule 28    stmt -> continue_stmt
Rule 29    stmt -> block
Rule 30    decl_stmt -> type_specifier init_decl SEMICOLON
Rule 31    decl_stmt -> type_specifier ID SEMICOLON
Rule 32    init_decl -> ID ASSIGN expression
Rule 33    expr_stmt -> assignment SEMICOLON
Rule 34    expr_stmt -> unary_inc_dec SEMICOLON
Rule 35    expr_stmt -> compound_assignment SEMICOLON
Rule 36    assignment -> ID ASSIGN expression
Rule 37    unary_inc_dec -> ID INC
Rule 38    unary_inc_dec -> ID DEC
Rule 39    compound_assignment -> ID PLUS_ASSIGN expression
Rule 40    compound_assignment -> ID MINUS_ASSIGN expression
Rule 41    compound_assignment -> ID TIMES_ASSIGN expression
Rule 42    compound_assignment -> ID DIVIDE_ASSIGN expression
Rule 43    expression -> expression PLUS expression
Rule 44    expression -> expression MINUS expression
Rule 45    expression -> expression TIMES expression
Rule 46    expression -> expression DIVIDE expression
Rule 47    expression -> expression MOD expression
Rule 48    expression -> expression EQ expression
Rule 49    expression -> expression NEQ expression
Rule 50    expression -> expression LT expression
Rule 51    expression -> expression GT expression
Rule 52    expression -> expression LE expression
Rule 53    expression -> expression GE expression
Rule 54    expression -> expression AND expression
Rule 55    expression -> expression OR expression
Rule 56    expression -> MINUS expression
Rule 57    expression -> NOT expression
Rule 58    expression -> LPAREN expression RPAREN
Rule 59    expression -> INT_CONST
Rule 60    expression -> FLOAT_CONST
Rule 61    expression -> STRING_LITERAL
Rule 62    expression -> CHAR_CONST
Rule 63    expression -> ID
Rule 64    while_stmt -> WHILE LPAREN expression RPAREN stmt
Rule 65    for_stmt -> FOR LPAREN for_init SEMICOLON for_cond SEMICOLON for_iter RPAREN stmt
Rule 66    for_init -> decl_stmt
Rule 67    for_init -> assignment
Rule 68    for_init -> unary_inc_dec
Rule 69    for_init -> compound_assignment
Rule 70    for_init -> empty
Rule 71    for_cond -> expression
Rule 72    for_cond -> empty
Rule 73    for_iter -> expr_iter
Rule 74    for_iter -> empty
Rule 75    expr_iter -> ID INC
Rule 76    expr_iter -> ID DEC
Rule 77    expr_iter -> assignment
Rule 78    expr_iter -> compound_assignment
Rule 79    io_stmt -> cout_stmt SEMICOLON
Rule 80    io_stmt -> cin_stmt SEMICOLON
Rule 81    cout_stmt -> COUT insertion_list
Rule 82    insertion_list -> LSHIFT insertion_items
Rule 83    insertion_items -> insertion_items LSHIFT insertion_item
Rule 84    insertion_items -> insertion_item
Rule 85    insertion_item -> expression
Rule 86    insertion_item -> ENDL
Rule 87    cin_stmt -> CIN extraction_list
Rule 88    extraction_list -> RSHIFT extraction_items
Rule 89    extraction_items -> extraction_items RSHIFT extraction_target
Rule 90    extraction_items -> extraction_target
Rule 91    extraction_target -> ID
Rule 92    if_stmt -> IF LPAREN expression RPAREN stmt ELSE stmt
Rule 93    if_stmt -> IF LPAREN expression RPAREN stmt
Rule 94    return_stmt -> RETURN expression SEMICOLON
Rule 95    return_stmt -> RETURN SEMICOLON
Rule 96    break_stmt -> BREAK SEMICOLON
Rule 97    continue_stmt -> CONTINUE SEMICOLON
Rule 98    empty -> <empty>

Terminals, with rules where they appear

AND                  : 54
ASSIGN               : 32 36
BOOL                 : 15
BREAK                : 96
CHAR                 : 14
CHAR_CONST           : 62
CIN                  : 87
COMMA                : 7
CONTINUE             : 97
COUT                 : 81
DEC                  : 38 76
DIVIDE               : 46
DIVIDE_ASSIGN        : 42
DOUBLE               : 13
ELSE                 : 92
ENDL                 : 86
EQ                   : 48
FLOAT                : 12
FLOAT_CONST          : 60
FOR                  : 65
GE                   : 53
GT                   : 51
ID                   : 6 10 31 32 36 37 38 39 40 41 42 63 75 76 91
IF                   : 92 93
INC                  : 37 75
INT                  : 11
INT_CONST            : 59
LBRACE               : 17
LBRACKET             : 
LE                   : 52
LPAREN               : 6 58 64 65 92 93
LSHIFT               : 82 83
LT                   : 50
MINUS                : 44 56
MINUS_ASSIGN         : 40
MOD                  : 47
NEQ                  : 49
NOT                  : 57
OR                   : 55
PLUS                 : 43
PLUS_ASSIGN          : 39
RBRACE               : 17
RBRACKET             : 
RETURN               : 94 95
RPAREN               : 6 58 64 65 92 93
RSHIFT               : 88 89
SEMICOLON            : 30 31 33 34 35 65 65 79 80 94 95 96 97
STRING               : 16
STRING_LITERAL       : 61
TIMES                : 45
TIMES_ASSIGN         : 41
WHILE                : 64
error                : 

Nonterminals, with rules where they appear

assignment           : 33 67 77
block                : 6 29
break_stmt           : 27
cin_stmt             : 80
compound_assignment  : 35 69 78
continue_stmt        : 28
cout_stmt            : 79
decl_stmt            : 20 66
empty                : 9 19 70 72 74
expr_iter            : 73
expr_stmt            : 21
expression           : 32 36 39 40 41 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 57 58 64 71 85 92 93 94
extraction_items     : 88 89
extraction_list      : 87
extraction_target    : 89 90
for_cond             : 65
for_init             : 65
for_iter             : 65
for_stmt             : 24
function_def         : 4
global_item          : 2 3
global_items         : 1 2
if_stmt              : 22
init_decl            : 30
insertion_item       : 83 84
insertion_items      : 82 83
insertion_list       : 81
io_stmt              : 25
param                : 7 8
param_list           : 6 7
program              : 0
return_stmt          : 26
stmt                 : 5 18 64 65 92 92 93
stmt_list            : 17 18
type_specifier       : 6 10 30 31
unary_inc_dec        : 34 68
while_stmt           : 23

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . global_items
    (2) global_items -> . global_items global_item
    (3) global_items -> . global_item
    (4) global_item -> . function_def
    (5) global_item -> . stmt
    (6) function_def -> . type_specifier ID LPAREN param_list RPAREN block
    (20) stmt -> . decl_stmt
    (21) stmt -> . expr_stmt
    (22) stmt -> . if_stmt
    (23) stmt -> . while_stmt
    (24) stmt -> . for_stmt
    (25) stmt -> . io_stmt
    (26) stmt -> . return_stmt
    (27) stmt -> . break_stmt
    (28) stmt -> . continue_stmt
    (29) stmt -> . block
    (11) type_specifier -> . INT
    (12) type_specifier -> . FLOAT
    (13) type_specifier -> . DOUBLE
    (14) type_specifier -> . CHAR
    (15) type_specifier -> . BOOL
    (16) type_specifier -> . STRING
    (30) decl_stmt -> . type_specifier init_decl SEMICOLON
    (31) decl_stmt -> . type_specifier ID SEMICOLON
    (33) expr_stmt -> . assignment SEMICOLON
    (34) expr_stmt -> . unary_inc_dec SEMICOLON
    (35) expr_stmt -> . compound_assignment SEMICOLON
    (92) if_stmt -> . IF LPAREN expression RPAREN stmt ELSE stmt
    (93) if_stmt -> . IF LPAREN expression RPAREN stmt
    (64) while_stmt -> . WHILE LPAREN expression RPAREN stmt
    (65) for_stmt -> . FOR LPAREN for_init SEMICOLON for_cond SEMICOLON for_iter RPAREN stmt
    (79) io_stmt -> . cout_stmt SEMICOLON
    (80) io_stmt -> . cin_stmt SEMICOLON
    (94) return_stmt -> . RETURN expression SEMICOLON
    (95) return_stmt -> . RETURN SEMICOLON
    (96) break_stmt -> . BREAK SEMICOLON
    (97) continue_stmt -> . CONTINUE SEMICOLON
    (17) block -> . LBRACE stmt_list RBRACE
    (36) assignment -> . ID ASSIGN expression
    (37) unary_inc_dec -> . ID INC
    (38) unary_inc_dec -> . ID DEC
    (39) compound_assignment -> . ID PLUS_ASSIGN expression
    (40) compound_assignment -> . ID MINUS_ASSIGN expression
    (41) compound_assignment -> . ID TIMES_ASSIGN expression
    (42) compound_assignment -> . ID DIVIDE_ASSIGN expression
    (81) cout_stmt -> . COUT insertion_list
    (87) cin_stmt -> . CIN extraction_list

    INT             shift and go to state 18
    FLOAT           shift and go to state 19
    DOUBLE          shift and go to state 20
    CHAR            shift and go to state 21
    BOOL            shift and go to state 22
    STRING          shift and go to state 23
    IF              shift and go to state 27
    WHILE           shift and go to state 28
    FOR             shift and go to state 29
    RETURN          shift and go to state 32
    BREAK           shift and go to state 33
    CONTINUE        shift and go to state 34
    LBRACE          shift and go to state 35
    ID              shift and go to state 7
    COUT            shift and go to state 36
    CIN             shift and go to state 37

    program                        shift and go to state 1
    global_items                   shift and go to state 2
    global_item                    shift and go to state 3
    function_def                   shift and go to state 4
    stmt                           shift and go to state 5
    type_specifier                 shift and go to state 6
    block                          shift and go to state 8
    decl_stmt                      shift and go to state 9
    expr_stmt                      shift and go to state 10
    if_stmt                        shift and go to state 11
    while_stmt                     shift and go to state 12
    for_stmt                       shift and go to state 13
    io_stmt                        shift and go to state 14
    return_stmt                    shift and go to state 15
    break_stmt                     shift and go to state 16
    continue_stmt                  shift and go to state 17
    assignment                     shift and go to state 24
    unary_inc_dec                  shift and go to state 25
    compound_assignment            shift and go to state 26
    cout_stmt                      shift and go to state 30
    cin_stmt                       shift and go to state 31

state 1

    (0) S' -> program .



state 2

    (1) program -> global_items .
    (2) global_items -> global_items . global_item
    (4) global_item -> . function_def
    (5) global_item -> . stmt
    (6) function_def -> . type_specifier ID LPAREN param_list RPAREN block
    (20) stmt -> . decl_stmt
    (21) stmt -> . expr_stmt
    (22) stmt -> . if_stmt
    (23) stmt -> . while_stmt
    (24) stmt -> . for_stmt
    (25) stmt -> . io_stmt
    (26) stmt -> . return_stmt
    (27) stmt -> . break_stmt
    (28) stmt -> . continue_stmt
    (29) stmt -> . block
    (11) type_specifier -> . INT
    (12) type_specifier -> . FLOAT
    (13) type_specifier -> . DOUBLE
    (14) type_specifier -> . CHAR
    (15) type_specifier -> . BOOL
    (16) type_specifier -> . STRING
    (30) decl_stmt -> . type_specifier init_decl SEMICOLON
    (31) decl_stmt -> . type_specifier ID SEMICOLON
    (33) expr_stmt -> . assignment SEMICOLON
    (34) expr_stmt -> . unary_inc_dec SEMICOLON
    (35) expr_stmt -> . compound_assignment SEMICOLON
    (92) if_stmt -> . IF LPAREN expression RPAREN stmt ELSE stmt
    (93) if_stmt -> . IF LPAREN expression RPAREN stmt
    (64) while_stmt -> . WHILE LPAREN expression RPAREN stmt
    (65) for_stmt -> . FOR LPAREN for_init SEMICOLON for_cond SEMICOLON for_iter RPAREN stmt
    (79) io_stmt -> . cout_stmt SEMICOLON
    (80) io_stmt -> . cin_stmt SEMICOLON
    (94) return_stmt -> . RETURN expression SEMICOLON
    (95) return_stmt -> . RETURN SEMICOLON
    (96) break_stmt -> . BREAK SEMICOLON
    (97) continue_stmt -> . CONTINUE SEMICOLON
    (17) block -> . LBRACE stmt_list RBRACE
    (36) assignment -> . ID ASSIGN expression
    (37) unary_inc_dec -> . ID INC
    (38) unary_inc_dec -> . ID DEC
    (39) compound_assignment -> . ID PLUS_ASSIGN expression
    (40) compound_assignment -> . ID MINUS_ASSIGN expression
    (41) compound_assignment -> . ID TIMES_ASSIGN expression
    (42) compound_assignment -> . ID DIVIDE_ASSIGN expression
    (81) cout_stmt -> . COUT insertion_list
    (87) cin_stmt -> . CIN extraction_list

    $end            reduce using rule 1 (program -> global_items .)
    INT             shift and go to state 18
    FLOAT           shift and go to state 19
    DOUBLE          shift and go to state 20
    CHAR            shift and go to state 21
    BOOL            shift and go to state 22
    STRING          shift and go to state 23
    IF              shift and go to state 27
    WHILE           shift and go to state 28
    FOR             shift and go to state 29
    RETURN          shift and go to state 32
    BREAK           shift and go to state 33
    CONTINUE        shift and go to state 34
    LBRACE          shift and go to state 35
    ID              shift and go to state 7
    COUT            shift and go to state 36
    CIN             shift and go to state 37

    global_item                    shift and go to state 38
    function_def                   shift and go to state 4
    stmt                           shift and go to state 5
    type_specifier                 shift and go to state 6
    block                          shift and go to state 8
    decl_stmt                      shift and go to state 9
    expr_stmt                      shift and go to state 10
    if_stmt                        shift and go to state 11
    while_stmt                     shift and go to state 12
    for_stmt                       shift and go to state 13
    io_stmt                        shift and go to state 14
    return_stmt                    shift and go to state 15
    break_stmt                     shift and go to state 16
    continue_stmt                  shift and go to state 17
    assignment                     shift and go to state 24
    unary_inc_dec                  shift and go to state 25
    compound_assignment            shift and go to state 26
    cout_stmt                      shift and go to state 30
    cin_stmt                       shift and go to state 31

state 3

    (3) global_items -> global_item .

    INT             reduce using rule 3 (global_items -> global_item .)
    FLOAT           reduce using rule 3 (global_items -> global_item .)
    DOUBLE          reduce using rule 3 (global_items -> global_item .)
    CHAR            reduce using rule 3 (global_items -> global_item .)
    BOOL            reduce using rule 3 (global_items -> global_item .)
    STRING          reduce using rule 3 (global_items -> global_item .)
    IF              reduce using rule 3 (global_items -> global_item .)
    WHILE           reduce using rule 3 (global_items -> global_item .)
    FOR             reduce using rule 3 (global_items -> global_item .)
    RETURN          reduce using rule 3 (global_items -> global_item .)
    BREAK           reduce using rule 3 (global_items -> global_item .)
    CONTINUE        reduce using rule 3 (global_items -> global_item .)
    LBRACE          reduce using rule 3 (global_items -> global_item .)
    ID              reduce using rule 3 (global_items -> global_item .)
    COUT            reduce using rule 3 (global_items -> global_item .)
    CIN             reduce using rule 3 (global_items -> global_item .)
    $end            reduce using rule 3 (global_items -> global_item .)


state 4

    (4) global_item -> function_def .

    INT             reduce using rule 4 (global_item -> function_def .)
    FLOAT           reduce using rule 4 (global_item -> function_def .)
    DOUBLE          reduce using rule 4 (global_item -> function_def .)
    CHAR            reduce using rule 4 (global_item -> function_def .)
    BOOL            reduce using rule 4 (global_item -> function_def .)
    STRING          reduce using rule 4 (global_item -> function_def .)
    IF              reduce using rule 4 (global_item -> function_def .)
    WHILE           reduce using rule 4 (global_item -> function_def .)
    FOR             reduce using rule 4 (global_item -> function_def .)
    RETURN          reduce using rule 4 (global_item -> function_def .)
    BREAK           reduce using rule 4 (global_item -> function_def .)
    CONTINUE        reduce using rule 4 (global_item -> function_def .)
    LBRACE          reduce using rule 4 (global_item -> function_def .)
    ID              reduce using rule 4 (global_item -> function_def .)
    COUT            reduce using rule 4 (global_item -> function_def .)
    CIN             reduce using rule 4 (global_item -> function_def .)
    $end            reduce using rule 4 (global_item -> function_def .)


state 5

    (5) global_item -> stmt .

    INT             reduce using rule 5 (global_item -> stmt .)
    FLOAT           reduce using rule 5 (global_item -> stmt .)
    DOUBLE          reduce using rule 5 (global_item -> stmt .)
    CHAR            reduce using rule 5 (global_item -> stmt .)
    BOOL            reduce using rule 5 (global_item -> stmt .)
    STRING          reduce using rule 5 (global_item -> stmt .)
    IF              reduce using rule 5 (global_item -> stmt .)
    WHILE           reduce using rule 5 (global_item -> stmt .)
    FOR             reduce using rule 5 (global_item -> stmt .)
    RETURN          reduce using rule 5 (global_item -> stmt .)
    BREAK           reduce using rule 5 (global_item -> stmt .)
    CONTINUE        reduce using rule 5 (global_item -> stmt .)
    LBRACE          reduce using rule 5 (global_item -> stmt .)
    ID              reduce using rule 5 (global_item -> stmt .)
    COUT            reduce using rule 5 (global_item -> stmt .)
    CIN             reduce using rule 5 (global_item -> stmt .)
    $end            reduce using rule 5 (global_item -> stmt .)


state 6

    (6) function_def -> type_specifier . ID LPAREN param_list RPAREN block
    (30) decl_stmt -> type_specifier . init_decl SEMICOLON
    (31) decl_stmt -> type_specifier . ID SEMICOLON
    (32) init_decl -> . ID ASSIGN expression

    ID              shift and go to state 39

    init_decl                      shift and go to state 40

state 7

    (36) assignment -> ID . ASSIGN expression
    (37) unary_inc_dec -> ID . INC
    (38) unary_inc_dec -> ID . DEC
    (39) compound_assignment -> ID . PLUS_ASSIGN expression
    (40) compound_assignment -> ID . MINUS_ASSIGN expression
    (41) compound_assignment -> ID . TIMES_ASSIGN expression
    (42) compound_assignment -> ID . DIVIDE_ASSIGN expression

    ASSIGN          shift and go to state 41
    INC             shift and go to state 42
    DEC             shift and go to state 43
    PLUS_ASSIGN     shift and go to state 44
    MINUS_ASSIGN    shift and go to state 45
    TIMES_ASSIGN    shift and go to state 46
    DIVIDE_ASSIGN   shift and go to state 47


state 8

    (29) stmt -> block .

    INT             reduce using rule 29 (stmt -> block .)
    FLOAT           reduce using rule 29 (stmt -> block .)
    DOUBLE          reduce using rule 29 (stmt -> block .)
    CHAR            reduce using rule 29 (stmt -> block .)
    BOOL            reduce using rule 29 (stmt -> block .)
    STRING          reduce using rule 29 (stmt -> block .)
    IF              reduce using rule 29 (stmt -> block .)
    WHILE           reduce using rule 29 (stmt -> block .)
    FOR             reduce using rule 29 (stmt -> block .)
    RETURN          reduce using rule 29 (stmt -> block .)
    BREAK           reduce using rule 29 (stmt -> block .)
    CONTINUE        reduce using rule 29 (stmt -> block .)
    LBRACE          reduce using rule 29 (stmt -> block .)
    ID              reduce using rule 29 (stmt -> block .)
    COUT            reduce using rule 29 (stmt -> block .)
    CIN             reduce using rule 29 (stmt -> block .)
    $end            reduce using rule 29 (stmt -> block .)
    RBRACE          reduce using rule 29 (stmt -> block .)
    ELSE            reduce using rule 29 (stmt -> block .)


state 9

    (20) stmt -> decl_stmt .

    INT             reduce using rule 20 (stmt -> decl_stmt .)
    FLOAT           reduce using rule 20 (stmt -> decl_stmt .)
    DOUBLE          reduce using rule 20 (stmt -> decl_stmt .)
    CHAR            reduce using rule 20 (stmt -> decl_stmt .)
    BOOL            reduce using rule 20 (stmt -> decl_stmt .)
    STRING          reduce using rule 20 (stmt -> decl_stmt .)
    IF              reduce using rule 20 (stmt -> decl_stmt .)
    WHILE           reduce using rule 20 (stmt -> decl_stmt .)
    FOR             reduce using rule 20 (stmt -> decl_stmt .)
    RETURN          reduce using rule 20 (stmt -> decl_stmt .)
    BREAK           reduce using rule 20 (stmt -> decl_stmt .)
    CONTINUE        reduce using rule 20 (stmt -> decl_stmt .)
    LBRACE          reduce using rule 20 (stmt -> decl_stmt .)
    ID              reduce using rule 20 (stmt -> decl_stmt .)
    COUT            reduce using rule 20 (stmt -> decl_stmt .)
    CIN             reduce using rule 20 (stmt -> decl_stmt .)
    $end            reduce using rule 20 (stmt -> decl_stmt .)
    RBRACE          reduce using rule 20 (stmt -> decl_stmt .)
    ELSE            reduce using rule 20 (stmt -> decl_stmt .)


state 10

    (21) stmt -> expr_stmt .
